# parlotte

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.claude/skills/: ax-inspect.swift  integration-tests.md  ui-testing.md  unit-tests.md
.github/workflows/: ci.yml
apple/Parlotte/: Config.xcconfig.example  Package.swift  project.yml
apple/Parlotte/Resources/: Info.plist  Parlotte.entitlements  ParlotteLib-Info.plist  PrivacyInfo.xcprivacy
apple/Parlotte/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
apple/Parlotte/Sources/: ContentView.swift  ParlotteApp.swift
apple/Parlotte/Sources/Models/: AppState.swift
apple/Parlotte/Sources/ParlotteApp/: ContentView.swift  DesignSystem.swift  ParlotteApp.swift
apple/Parlotte/Sources/ParlotteApp/Views/: CreateRoomView.swift  ExploreRoomsView.swift  LoginView.swift  MemberListView.swift  MessageScrollView.swift  ProfileView.swift  RoomDetailView.swift  RoomListView.swift  RoomSettingsView.swift  VerificationView.swift
apple/Parlotte/Sources/ParlotteLib/: MessageRenderCache.swift  MessageScrollDecision.swift  NotificationManager.swift
apple/Parlotte/Sources/ParlotteLib/Debug/: DebugServer.swift
apple/Parlotte/Sources/ParlotteLib/Models/: AppState.swift  Keychain.swift  OidcAuthSession.swift  SsoCallbackServer.swift
apple/Parlotte/Sources/TestRunner/: main.swift
apple/Parlotte/Sources/Views/: CreateRoomView.swift  ExploreRoomsView.swift  LoginView.swift  MemberListView.swift  MessageScrollView.swift  RoomDetailView.swift  RoomListView.swift
apple/Parlotte/Tests/: AppStateEdgeCaseTests.swift  AppStateNotificationTests.swift  AppStateTests.swift  DebugServerTests.swift  MediaTestHelpers.swift  MessageRenderCacheTests.swift  MessageScrollDecisionTests.swift  MockMatrixClient.swift
apple/ParlotteSDK/: Package.swift
apple/ParlotteSDK/Sources/ParlotteSDK/: MatrixClient.swift  MatrixClientProtocol.swift  ParlotteError+LocalizedError.swift
branding/app-store/: copy.txt
crates/parlotte-core/: Cargo.toml
crates/parlotte-core/src/: client.rs  error.rs  lib.rs  message.rs  recovery.rs  room.rs  session.rs  sync.rs  verification.rs
crates/parlotte-ffi/: Cargo.toml  build.rs
crates/parlotte-ffi/src/: lib.rs
docs/: _config.yml  index.md  privacy.md  support.md
scripts/: archive.sh  build-app.sh  build-apple.sh  build-icon.sh  create-test-users.sh  gen-xcodeproj.sh  run-integration-tests.sh
tests/integration/: Cargo.toml  docker-compose.yml
tests/integration/src/: lib.rs
tests/integration/synapse/: extra-config.yaml
