[workspace]
resolver = "2"
members = [
    "crates/parlotte-core",
    "crates/parlotte-ffi",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite", "markdown"] }
uniffi = { version = "0.31" }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
