[package]
name = "parlotte-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
matrix-sdk = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
matrix-sdk = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = "0.6"
serde_json = "1"
tempfile = "3"
