[package]
name = "parlotte-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
matrix-sdk = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"
mime = "0.3"
serde_json = "1"

[dev-dependencies]
matrix-sdk = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
